# semantic-brain-app

./: .env.example  Dockerfile  README.md  demo_setup.py  docker-compose.yml  pyproject.toml
agents/: orchestrator.py  researcher.py  verifier.py
api/: cli_ingest.py  graph_db.py  ingestion.py  main.py
core/: Cargo.toml  bridge.py
core/src/: lib.rs
