[package]
name = "semantic-brain-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "semantic_brain_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
petgraph = "0.6.4" # For graph algorithms if needed in Rust
serde = { version = "1.0", features = ["derive"] }
